// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ZcashBalance renders component 1`] = `
<WithStyles(ForwardRef(Grid))
  align="flex-start"
  container={true}
  direction="column"
  spacing={0}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <WithStyles(ForwardRef(Typography))
      className="zecBalance-mock"
      display="inline"
      variant="body2"
    >
      12.32
       ZEC
    </WithStyles(ForwardRef(Typography))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <WithStyles(ForwardRef(Typography))
      className="usdBalance-mock"
      variant="caption"
    >
      $
      3243
       
      USD
    </WithStyles(ForwardRef(Typography))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`ZcashBalance renders when balanced locked 1`] = `
<WithStyles(ForwardRef(Grid))
  align="flex-start"
  container={true}
  direction="column"
  spacing={0}
>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <WithStyles(ForwardRef(Typography))
      className="zecBalance-mock"
      display="inline"
      variant="body2"
    >
      0
       ZEC
    </WithStyles(ForwardRef(Typography))>
    <Memo(WithStyles(Tooltip))
      className="tooltip-mock"
      placement="bottom"
      title="Some funds are unavailable until pending transactions complete."
    >
      <WithStyles(ForwardRef(Typography))
        className="pending-mock"
        display="inline"
        variant="caption"
      >
        Pending...
      </WithStyles(ForwardRef(Typography))>
    </Memo(WithStyles(Tooltip))>
  </WithStyles(ForwardRef(Grid))>
  <WithStyles(ForwardRef(Grid))
    item={true}
  >
    <WithStyles(ForwardRef(Typography))
      className="usdBalance-mock"
      variant="caption"
    >
      $
      0.00
       
      USD
    </WithStyles(ForwardRef(Typography))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;
